--- a/output/actor-cards.html
+++ b/output/actor-cards.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../src/main/resources/imgs/favicon.jpg">
+    <link rel="shortcut icon" href="favicon.jpg">
     <link rel="stylesheet" href="movie-list.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Best Movies Ever</title>
